# controller/menu.go
@@ -29,7 +29,7 @@ func NewMenuController(menuService *service.MenuService) *MenuController {
 // @Produce json
 // @Security Bearer
 // @Param menu body model.CreateMenuReq true "菜单信息"
-// @Success 200 {object} utils.Response
+// @Success 200 {object} utils.StandardResponse
 // @Router /menus [post]
 func (c *MenuController) CreateMenu(ctx *gin.Context) {
 	if !middleware.IsAdmin(ctx) {
@@ -59,7 +59,7 @@ func (c *MenuController) CreateMenu(ctx *gin.Context) {
 // @Produce json
 // @Security Bearer
 // @Param id path int true "菜单ID"
-// @Success 200 {object} utils.Response{data=model.Menu}
+// @Success 200 {object} utils.StandardResponse{data=model.Menu}
 // @Router /menus/{id} [get]
 func (c *MenuController) GetMenu(ctx *gin.Context) {
 	id, err := strconv.ParseUint(ctx.Param("id"), 10, 32)
@@ -86,7 +86,7 @@ func (c *MenuController) GetMenu(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Security Bearer
-// @Success 200 {object} utils.Response{data=[]model.Menu}
+// @Success 200 {object} utils.StandardResponse{data=[]model.Menu}
 // @Router /menus [get]
 func (c *MenuController) ListMenus(ctx *gin.Context) {
 	menus, err := c.menuService.ListMenus()
@@ -107,7 +107,7 @@ func (c *MenuController) ListMenus(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Security Bearer
-// @Success 200 {object} utils.Response{data=[]model.Menu}
+// @Success 200 {object} utils.StandardResponse{data=[]model.Menu}
 // @Router /menus/tree [get]
 func (c *MenuController) GetMenuTree(ctx *gin.Context) {
 	tree, err := c.menuService.GetMenuTree()
@@ -130,7 +130,7 @@ func (c *MenuController) GetMenuTree(ctx *gin.Context) {
 // @Security Bearer
 // @Param id path int true "菜单ID"
 // @Param menu body model.UpdateMenuReq true "菜单信息"
-// @Success 200 {object} utils.Response
+// @Success 200 {object} utils.StandardResponse
 // @Router /menus/{id} [put]
 func (c *MenuController) UpdateMenu(ctx *gin.Context) {
 	if !middleware.IsAdmin(ctx) {
@@ -166,7 +166,7 @@ func (c *MenuController) UpdateMenu(ctx *gin.Context) {
 // @Produce json
 // @Security Bearer
 // @Param id path int true "菜单ID"
-// @Success 200 {object} utils.Response
+// @Success 200 {object} utils.StandardResponse
 // @Router /menus/{id} [delete]
 func (c *MenuController) DeleteMenu(ctx *gin.Context) {
 	if !middleware.IsAdmin(ctx) {
@@ -226,7 +226,7 @@ func (c *MenuController) AssignMenusToRole(ctx *gin.Context) {
 // @Produce json
 // @Security Bearer
 // @Param role_id query int true "角色ID"
-// @Success 200 {object} utils.Response{data=[]model.Menu}
+// @Success 200 {object} utils.StandardResponse{data=[]model.Menu}
 // @Router /menus/role [get]
 func (c *MenuController) GetRoleMenus(ctx *gin.Context) {
 	roleID, err := strconv.ParseUint(ctx.Query("role_id"), 10, 32)
@@ -254,7 +254,7 @@ func (c *MenuController) GetRoleMenus(ctx *gin.Context) {
 // @Produce json
 // @Security Bearer
 // @Param role_id query int true "角色ID"
-// @Success 200 {object} utils.Response{data=[]uint}
+// @Success 200 {object} utils.StandardResponse{data=[]uint}
 // @Router /menus/role-ids [get]
 func (c *MenuController) GetRoleMenuIDs(ctx *gin.Context) {
 	roleID, err := strconv.ParseUint(ctx.Query("role_id"), 10, 32)
@@ -282,7 +282,7 @@ func (c *MenuController) GetRoleMenuIDs(ctx *gin.Context) {
 // @Produce json
 // @Security Bearer
 // @Param assignment body model.AssignStoreMenusReq true "分配信息"
-// @Success 200 {object} utils.Response
+// @Success 200 {object} utils.StandardResponse
 // @Router /menus/assign-store-role [post]
 func (c *MenuController) AssignMenusToStoreRole(ctx *gin.Context) {
 	storeID := middleware.GetStoreID(ctx)
@@ -317,7 +317,7 @@ func (c *MenuController) AssignMenusToStoreRole(ctx *gin.Context) {
 // @Security Bearer
 // @Param store_id query int true "门店ID"
 // @Param role_id query int true "角色ID"
-// @Success 200 {object} utils.Response{data=[]model.Menu}
+// @Success 200 {object} utils.StandardResponse{data=[]model.Menu}
 // @Router /menus/store-role [get]
 func (c *MenuController) GetStoreRoleMenus(ctx *gin.Context) {
 	storeID, err := strconv.ParseUint(ctx.Query("store_id"), 10, 32)
@@ -352,7 +352,7 @@ func (c *MenuController) GetStoreRoleMenus(ctx *gin.Context) {
 // @Security Bearer
 // @Param store_id query int true "门店ID"
 // @Param role_id query int true "角色ID"
-// @Success 200 {object} utils.Response{data=[]uint}
+// @Success 200 {object} utils.StandardResponse{data=[]uint}
 // @Router /menus/store-role-ids [get]
 func (c *MenuController) GetStoreRoleMenuIDs(ctx *gin.Context) {
 	storeID, err := strconv.ParseUint(ctx.Query("store_id"), 10, 32)
@@ -386,7 +386,7 @@ func (c *MenuController) GetStoreRoleMenuIDs(ctx *gin.Context) {
 // @Produce json
 // @Security Bearer
 // @Param copy body model.CopyStoreMenusReq true "复制信息"
-// @Success 200 {object} utils.Response
+// @Success 200 {object} utils.StandardResponse
 // @Router /menus/copy-store [post]
 func (c *MenuController) CopyStoreMenus(ctx *gin.Context) {
 	if !middleware.IsAdmin(ctx) {
@@ -415,7 +415,7 @@ func (c *MenuController) CopyStoreMenus(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Security Bearer
-// @Success 200 {object} utils.Response{data=[]model.Menu}
+// @Success 200 {object} utils.StandardResponse{data=[]model.Menu}
 // @Router /menus/user-menus [get]
 func (c *MenuController) GetUserMenus(ctx *gin.Context) {
 	storeID := middleware.GetStoreID(ctx)
@@ -456,7 +456,7 @@ func (c *MenuController) GetUserMenus(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Security Bearer
-// @Success 200 {object} utils.Response{data=[]string}
+// @Success 200 {object} utils.StandardResponse{data=[]string}
 // @Router /menus/user-permissions [get]
 func (c *MenuController) GetUserPermissions(ctx *gin.Context) {
 	storeID := middleware.GetStoreID(ctx)
