# docs/swagger.json
@@ -52,7 +52,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -96,7 +96,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -142,11 +142,11 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "分页 meta: total,page,page_size,page_count,has_more",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -196,7 +196,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -235,7 +235,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -289,7 +289,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -324,7 +324,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -376,11 +376,11 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "分页 meta: total,page,page_size,page_count,has_more",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -644,7 +644,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -694,7 +694,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -772,7 +772,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -811,7 +811,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -850,7 +850,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -902,7 +902,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -961,7 +961,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1020,7 +1020,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1063,7 +1063,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1106,7 +1106,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1149,7 +1149,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1201,7 +1201,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1255,7 +1255,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -1290,7 +1290,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -1330,11 +1330,11 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "分页 meta: total,page,page_size,page_count,has_more",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1384,7 +1384,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -1423,7 +1423,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1477,7 +1477,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -1512,7 +1512,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -1552,11 +1552,11 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "分页 meta: total,page,page_size,page_count,has_more",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1606,7 +1606,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -1636,7 +1636,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1683,7 +1683,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -1722,7 +1722,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.Response"
+                                    "$ref": "#/definitions/utils.StandardResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1776,7 +1776,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -1811,7 +1811,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Response"
+                            "$ref": "#/definitions/utils.StandardResponse"
                         }
                     }
                 }
@@ -2519,6 +2519,26 @@
                 }
             }
         },
+        "utils.Meta": {
+            "type": "object",
+            "properties": {
+                "has_more": {
+                    "type": "boolean"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_count": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "utils.Response": {
             "type": "object",
             "properties": {
@@ -2528,6 +2548,26 @@
                 "data": {},
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "utils.StandardResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "message": {
+                    "type": "string"
+                },
+                "meta": {
+                    "description": "始终返回（为空则为 null），方便前端统一解析",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/utils.Meta"
+                        }
+                    ]
                 }
             }
         }
